--- a/keahlian.html
+++ b/keahlian.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Keahlian</title>
+<title>keahlian</title>
 
 <style>
     body{
@@ -67,4 +67,5 @@
 
 </body>
 </html>
+
 
